2006-10-29  Guillaume Desmottes <cass@skynet.be>

	A .bzrignore:
	  - Add a bazaar ignore file for people using this
	    VCS.

2006-10-28  David Trowbridge  <trowbrds@gmail.com>

	* configure.ac:
	  - Bump to 0.16svn.

==================== 0.15 ====================

2006-10-28  David Trowbridge  <trowbrds@gmail.com>

	* configure.ac:
	* NEWS:
	  - Bump to 0.15.

2006-10-28  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/dcc-window.c:
	  - Fix a potential crasher when sending a file. (#365552)

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-dcc.c:
	* data/Makefile.am:
	A data/icons/hicolor/16x16/apps/xchat-gnome-dcc.png:
	* data/icons/hicolor/16x16/apps/Makefile.am:
	D data/dcc.png:
	  - Move last icon into the icontheme dir.

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/migration.c:
	  - Another possible crasher.

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/pixmaps.c:
	* src/fe-gnome/pixmaps.h:
	* src/fe-gnome/userlist-gui.c:
	* src/fe-gnome/userlist.c:
	D data/voice.png:
	* data/Makefile.am:
	A data/icons/hicolor/16x16/apps/xchat-gnome-status-voice.png:
	* data/icons/hicolor/16x16/apps/Makefile.am:
	  - Move (currently crapp) voice icon into the icon theme.

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* configure.ac
	D data/xchat-gnome-small.png
	* data/icons/hicolor/Makefile.am
	A data/icons/hicolor/128x128
	A data/icons/hicolor/128x128/apps/Makefile.am
	A data/icons/hicolor/128x128/apps
	A data/icons/hicolor/128x128/apps/xchat-gnome.png
	A data/icons/hicolor/128x128/Makefile.am
	  - Might as well install the 128x128 logo into a icontheme dir.

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	* data/icons/hicolor/22x22/apps/Makefile.am:
	A data/icons/hicolor/22x22/apps/xchat-gnome-users.png:
	* data/icons/hicolor/16x16/apps/Makefile.am:
	A data/icons/hicolor/16x16/apps/xchat-gnome-users.png: